# Cmake-cpp-samples

./: README.md
CMake-basic-example/: CMakeLists.txt
CMake-basic-example/include/: student.h
CMake-basic-example/src/: main.cpp
CMake-create-shared-library/: CMakeLists.txt
CMake-create-shared-library/include/: student.h
CMake-use-shared-library/: CMakeLists.txt  libtest.cpp
basic-CMake/: CMakeLists.txt
basic-CMake/src/: main.cpp  student.cpp
